# flask_pokedex_api

./: .gitignore  pyproject.toml
flask_pokedex_api/: api_app.py  pokeapi_requests.py  pokedex_schema.py  run.py
flask_pokedex_api/configs/: pokeapi_config.py  pokedex_api_config.py
tests/: api_requests_test.py  get_pokedata_test.py
