[tool.poetry]
name = "flask_pokedex_api"
version = "0.1.0"
description =  "flask built api that retrieves data from the pokeapi.co api to create a pokedex search"
authors = ["Oscar Jeffery <oscarjjeff920@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
types-requests = "^2.27.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
black = "^21.12b0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
